# python-oop-patterns

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
behavioral/: README.md  strategy.py
creational/: README.md
structural/: README.md
